# PicTextSearch

./: README.md  pyproject.toml
PicTextSearch/: __init__.py  sync.py
PicTextSearch/engines/: __init__.py  base.py  yandex.py
PicTextSearch/model/: __init__.py  base.py  yandex.py
demo/code/: yandex.py
tests/: test_yandex.py
