[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pictextsearch"
version = "0.1.0"
description = "Текстовый поиск изображений через Яндекс (асинхронно и синхронно)"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pyquery>=2.0.1",
    "lxml>=6.1.0,<6.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourname/pictextsearch"
Repository = "https://github.com/yourname/pictextsearch.git"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["demo*", "typings*", ".github*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"